--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">Patterns</string>
+    <string name="app_name">Promises</string>
+    <string name="ideas">Idea</string>
+    <string name="promise">Promise</string>
+    <string name="profile">Profile</string>
 </resources>
